static/index.css
.bg-light{
    background-color: green!important;
}
.btn-outline-success{
    color: maroon;
}
div h1{
    font-family: 'Roboto Slab', serif;
    letter-spacing: 0.9rem;
    color: firebrick;
    font-size: 2.5rem;
    padding-left: 80px;
    
}
.jumbotron{
    background-color: pink; 
}
.container{
    padding-left: 30px;
}
body{
    color: maroon;
}
textarea{
    margin-left: 220px;
}

